<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.opendota</groupId>
    <artifactId>stats</artifactId>
    <version>0.1.0</version>
    <packaging>jar</packaging>
    <developers>
        <developer>
            <id>albertcui</id>
            <name>Albert Cui</name>
            <email>albertqcui@gmail.com</email>
        </developer>
        <developer>
            <id>howardc93</id>
            <name>Howard Chung</name>
            <email>howardc93@gmail.com</email>
        </developer>
    </developers>
    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>sonatype.oss.snapshots</id>
            <name>Sonatype OSS Snapshot Repository</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>
    <dependencies>
<!--
        <dependency>
            <groupId>com.github.skadistats</groupId>
            <artifactId>clarity</artifactId>
            <version>master-SNAPSHOT</version>
        </dependency>
-->
<!--
        <dependency>
            <groupId>com.github.skadistats</groupId>
            <artifactId>clarity</artifactId>
            <version>0d6fb64f8e93733752e57fa0ec2b0b72dd859d96</version>
        </dependency>
-->
        <dependency>
            <groupId>com.skadistats</groupId>
            <artifactId>clarity</artifactId>
            <version>3.1.3</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.9</version>
        </dependency>
    </dependencies>
      <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.skadistats</groupId>
        <artifactId>clarity-protobuf</artifactId>
        <version>5.4</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>opendota.Main</mainClass>
                                </transformer>
                                <transformer implementation="org.atteo.classindex.ClassIndexTransformer" />
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>org.atteo.classindex</groupId>
                        <artifactId>classindex-transformer</artifactId>
                        <version>3.4</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>
    <name>opendota-parser</name>
</project>
